@@ -63,10 +63,11 @@ define( function( require ) {
     this.gamePlayNode = new Node();
 
     // Scoreboard bar at the top of the screen
+    this.challengesPerGameProperty = new Property( model.equations.length ); // @private
     var scoreboard = new ScoreboardBar(
       this.layoutBounds.width,
       model.currentEquationIndexProperty,
-      new Property( model.EQUATIONS_PER_GAME ),
+      this.challengesPerGameProperty,
       model.currentLevelProperty,
       model.pointsProperty,
       model.timer.elapsedTimeProperty,
@@ -199,6 +200,7 @@ define( function( require ) {
       this.rootNode.removeAllChildren();
       this.rootNode.addChild( this.gamePlayNode );
       this.model.startGame();
+      this.challengesPerGameProperty.set( this.model.equations.length );
     },
 
     initCheck: function() {
