@@ -1,3 +1,4 @@
+7/11/14 #71 add 'playAll' query parameter, to iterate over all possible challenges in the game
 7/10/14 #55 check that both timerID and intervalID are null, so that vegas.NumberPicker doesn't get stuck
 # 1.0.0-dev.6 7/7/14
 7/7/14 #27 add option to specify font size for equations, so that we can have screen-specific sizes
